Modificar pruebas unitarias para cargar objetos desde archivos JSON. Modificacion de docker-compose se agrego el servicio'product-webflux-client' para interactuar con 'product-webflux' y se optimizo el docker-compose solo con los servicios necesario para su funcionamiento

--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -15,6 +15,6 @@ ENV PROFILE=docker
 
 EXPOSE 8090
 
-
 COPY --from=dependencies /target/$ARTIFACT_NAME /app/app.jar
-CMD ["java", "-Dspring.profiles.active=${PROFILE}", "-jar", "/app/app.jar"]
+
+CMD ["java", "-Dspring.profiles.active=${PROFILE}","-Duser.timezone=America/Lima", "-Duser.language=es", "-Duser.country=PE", "-jar", "/app/app.jar"]
